test/tests/stages/18_structures/invalid_types/extra_credit/incompatible_union_types/assign_scalar_to_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  identifier(x)
  =
  const int(2)
  ;
  return
  const int(0)
  ;
  }
